--- a/travelopia-api/package.json
+++ b/travelopia-api/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node app.js",
+    "start": "node app.js --env=local",
     "dev": "SET DEBUG=travelopia-api:* && nodemon --exec npm start",
     "tests": "mocha tests",
     "stub": "mocha stubs"
@@ -15,6 +15,8 @@
     "express": "~4.16.1",
     "express-mysql-session": "^3.0.0",
     "joi": "^17.9.2",
+    "js-yaml": "^4.1.0",
+    "minimist": "^1.2.8",
     "morgan": "~1.9.1",
     "mysql2": "^3.6.0"
   },
