--- a/travelopia-api/package.json
+++ b/travelopia-api/package.json
@@ -6,9 +6,12 @@
     "start": "node app.js --env=local",
     "dev": "SET DEBUG=travelopia-api:* && nodemon --exec npm start",
     "tests": "mocha tests",
-    "stub": "mocha stubs"
+    "stub": "mocha stubs",
+    "build": "node netlify/functions/hello-background.js --env=netlify"
   },
   "dependencies": {
+    "@netlify/functions": "^1.6.0",
+    "@types/express": "^4.17.17",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
@@ -18,12 +21,15 @@
     "js-yaml": "^4.1.0",
     "minimist": "^1.2.8",
     "morgan": "~1.9.1",
-    "mysql2": "^3.6.0"
+    "mysql2": "^3.6.0",
+    "serverless-http": "^3.2.0"
   },
   "devDependencies": {
     "chai": "^4.3.7",
     "mocha": "^10.2.0",
     "nodemon": "^3.0.1",
-    "sinon": "^15.2.0"
+    "sinon": "^15.2.0",
+    "webpack": "^5.88.2",
+    "webpack-cli": "^5.1.4"
   }
 }
